<?xml version="1.0"?>
<package format="3">
  <name>pose_publisher</name>
  <version>0.1.3</version>
  <description>This package provides the current position and orientation of the robot in the map with PoseWithCovarianceStamped format.</description>

  <author email="zhi.yan@ai.univ-paris8.fr">Zhi Yan</author>
  <maintainer email="smoreno@robotnik.es">Sandra Moreno</maintainer>
  <maintainer email="ggari@robotnik.es">Guillem Gari</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pose_publisher</url>
  <url type="repository">https://github.com/RobotnikAutomation/pose_publisher.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
